<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">一刻Live</string>
    <string name="topic_detail_directory">选集（共%d个视频）</string>
    <string name="dian_ta">&lt;font color=\"#ff5a00\"&gt;%1$s&lt;/font&gt;已经有&lt;font color=\"#ff5a00\"&gt;%2$d&lt;/font&gt;人点TA来讲</string>
    <string name="pinglun">评论</string>
    <string name="fasong">发送</string>
    <string name="login">登录</string>
    <string name="fast_register">注册账号</string>
    <string name="back_pinglun">返回评论</string>
    <string name="input_count">输入手机号</string>
    <string name="phone_login">找回密码</string>
    <string name="login_hezuo_wangzhan">使用合作网站账号登录</string>
    <string name="hour_before">小时前</string>
    <string name="minute_before">分钟前</string>
    <string name="day_before">天前</string>
    <string name="mouth_before">月前</string>
    <string name="year_before">年前</string>
    <string name="good">赞</string>
    <string name="start_zhengzai">开启正在现场</string>
    <string name="xieyi">《正在现场使用服务协议》</string>
    <string name="video_layout_loading">正在缓冲...</string>
    <string name="search">搜索</string>
    <string name="hot_yugao">热门预告</string>
    <string name="hot_search">热门搜索</string>
    <string name="music_day">音乐节</string>
    <string name="guess_youlike">猜你喜欢</string>
    <string name="cancel">取消</string>
    <string name="biaoqing">标清</string>
    <string name="xuanji">选集</string>
    <string name="input_psd">请输入6-16位字母数字密码</string>
    <string name="regiter_phone">手机注册</string>
    <string name="regiter_email">邮箱注册</string>
    <string name="regiter">注册</string>
    <string name="regiter_finish">完成并进入个人中心</string>
    <string name="intput_duanxin_code">输入短信验证码</string>
    <string name="input_email">输入常用邮箱</string>
    <string name="_zhengzai_tv_">我已阅读《正在现场使用服务协议》</string>
    <string name="gaoqing">高清</string>
    <string name="chaoqing">超清</string>
    <string name="cancle">取消</string>
    <string name="hudong">条互动</string>
    <string name="your_think">这一刻你的想法...</string>
    <string name="fabiao_pinglun">发表评论</string>
    <string name="complete">完成</string>
    <string name="pinglun_success">评论成功</string>
    <string name="dianzan_success">点赞成功</string>
    <string name="shoucang_success">收藏成功</string>
    <string name="del_shoucang_success">取消收藏成功</string>
    <string name="just_now">刚刚</string>
    <string name="_getRegisterCode">获取验证码</string>
    <string name="_regetTime">后重新发送</string>
    <string name="_firstpage">首页</string>
    <string name="_zhibo">直播</string>
    <string name="_yinyuejie">探索</string>
    <string name="_paihangbang">排行</string>
    <string name="_zhuanti">专题</string>
    <string name="_already_yuyue">已预约</string>
    <string name="_cancle_yuyue">取消预约成功</string>
    <string name="_me">我</string>
    <string name="take_photo">拍照</string>
    <string name="photos">相册</string>
    <string name="_name">名字</string>
    <string name="_phone">手机</string>
    <string name="_emial">邮箱</string>
    <!-- 友盟字段 -->
    <string name="_del_success">删除成功</string>
    <string name="_del">删除</string>
    <string name="_next">下一步</string>

    <!-- 微信支付 -->
    <!-- WXPayEntryActivity -->
    <string name="app_tip">提示</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>

    <!-- BC-test -->
    <string name="bc_pay" formatted="false">微信支付</string>
    <string name="bc_pay_wx_title">微信支付</string>
    <string name="bc_pay_goto_wx">打开微信支付</string>
    <string name="my_youhuima">我的优惠码</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="delete_fav_fail">删除失败</string>

</resources>