<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="49dp"
    android:background="#f7f7f7"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ImageButton1"
            android:layout_width="match_parent"
            android:layout_height="3dp "
            android:layout_weight="1"
            android:background="@color/default_color" />

        <ImageView
            android:id="@+id/ImageButton"
            android:layout_width="match_parent"
            android:layout_height="3dp "
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/ImageButton3"
            android:layout_width="match_parent"
            android:layout_height="3dp "
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/ImageButton4"
            android:layout_width="match_parent"
            android:layout_height="3dp "
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/ImageButton5"
            android:layout_width="match_parent"
            android:layout_height="3dp "
            android:layout_weight="1" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="fill_parent"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="5" >

        <RadioButton
            android:id="@+id/rb_firstpage"
            style="@style/bottom_tabbar_style"
            android:checked="true"
            android:layout_marginTop="2dp"
            android:drawableTop="@drawable/tabbar_find_selector"
            android:text="@string/_firstpage" />

        <RadioButton
            android:id="@+id/rb_live"
            style="@style/bottom_tabbar_style"
            android:layout_marginTop="2dp"
            android:drawableTop="@drawable/tabbar_order_selector"
            android:text="@string/_zhibo" />

        <RadioButton
            android:id="@+id/rb_chennel"
            style="@style/bottom_tabbar_style"
            android:layout_marginTop="2dp"
            android:drawableTop="@drawable/tabbar_user_selector"
            android:text="@string/_yinyuejie" />

        <RadioButton
            android:id="@+id/rb_ranking"
            style="@style/bottom_tabbar_style"
            android:layout_marginTop="2dp"
            android:drawableTop="@drawable/tabbar_ranking_selector"
            android:text="@string/_paihangbang" />

        <RadioButton
            android:id="@+id/rb_topic"
            style="@style/bottom_tabbar_style"
            android:layout_marginTop="2dp"
            android:drawableTop="@drawable/tabbar_topic_selector"
            android:text="@string/_zhuanti" />
    </RadioGroup>

</LinearLayout>