<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/topcontent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navi_height"
        android:background="@color/topbar_bg" >

        <Button
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/return_arrow" />

        <Button
            android:id="@+id/registerOne_backBtn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/regiter"
            android:textColor="@color/text_white_grey"
            android:textSize="17sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topcontent"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/registerOne_countEdt"
            style="@style/edit_input_style"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:background="@drawable/edit_input_select"
            android:drawableLeft="@drawable/edit_count_select"
            android:drawablePadding="5dp"
            android:gravity="left|center"
            android:hint="@string/input_count"
            android:paddingLeft="10dp" />

        <Button
            android:id="@+id/registerOne_nextBtn"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_oval_default_color"
            android:text="@string/_next"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>

</RelativeLayout>