<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/shape_oval_white_color"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_pick_photo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/photos"
                android:textColor="@color/default_color"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_grey" />

            <Button
                android:id="@+id/btn_pick_take"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/take_photo"
                android:textColor="@color/default_color"
                android:textSize="17sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_pick_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_oval_white_color"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancle"
            android:textColor="@color/default_color"
            android:textSize="17sp" />
    </LinearLayout>

</RelativeLayout>