<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginBottom="80dp"
    android:background="@color/write"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="9dp" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/fabiao_pinglun"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/complete"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/red" />

        <ImageView
            android:id="@+id/img_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_close" />
    </RelativeLayout>

    <EditText
        android:id="@+id/ed_pinglun"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_input_little_text_gray"
        android:gravity="top"
        android:hint="@string/your_think"
        android:padding="5dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/img_add_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
             />

        <ImageView
            android:id="@+id/img_biaoqing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
             />
    </RelativeLayout>

</LinearLayout>