<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/topcontent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navi_height"
        android:background="@color/topbar_bg" >

        <Button
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/return_arrow" />

        <Button
            android:id="@+id/login_backBtn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/pure_white"
            android:textSize="17sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topcontent"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_countEdt"
            style="@style/edit_input_style"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/edit_count_select"
            android:drawablePadding="5dp"
            android:gravity="left|center"
            android:hint="@string/input_count"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/login_psdEdt"
            style="@style/edit_input_style"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/edit_psd_select"
            android:drawablePadding="5dp"
            android:gravity="left|center"
            android:hint="@string/input_psd"
            android:paddingLeft="10dp"
            android:password="true"
            android:textCursorDrawable="@drawable/cursor" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" >

            <TextView
                android:id="@+id/login_shoujiduanxinBtn"
                style="@style/default_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/phone_login" />

            <TextView
                android:id="@+id/login_fastRegsiterBtn"
                style="@style/default_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/fast_register" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_loginBtn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_trans_select"
            android:text="@string/login"
            android:textColor="@color/pure_white"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/whitesmoke"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_grey" />

        <TextView
            android:id="@+id/login_qqBtn"
            style="@style/default_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="QQ 账号登录" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_grey" />

        <TextView
            android:id="@+id/login_weiboBtn"
            style="@style/default_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="微博账号登录" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_grey" />

        <TextView
            android:id="@+id/login_weixinBtn"
            style="@style/default_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="微信账号登录" />
    </LinearLayout>

</RelativeLayout>